// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExternalLink> should render and match the snapshot 1`] = `
<StyledA
  color="inherit"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <IconExternalLink />
  <Description>
    ExternalLink to
  </Description>
</StyledA>
`;

exports[`<ExternalLink> with a given "faIcon" property should render with a "codepen" icon 1`] = `
<StyledA
  color="inherit"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <IconCodepen />
  <Description>
    ExternalLink to
  </Description>
</StyledA>
`;

exports[`<ExternalLink> with a given "faIcon" property should render with a "free-code-camp" icon 1`] = `
<StyledA
  color="inherit"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <IconFreeCodeCamp />
  <Description>
    ExternalLink to
  </Description>
</StyledA>
`;

exports[`<ExternalLink> with a given "faIcon" property should render with a "github" icon 1`] = `
<StyledA
  color="inherit"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <IconGithub />
  <Description>
    ExternalLink to
  </Description>
</StyledA>
`;

exports[`<ExternalLink> with a given "faIcon" property should render with a "linkedin" icon 1`] = `
<StyledA
  color="inherit"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <IconLinkedin />
  <Description>
    ExternalLink to
  </Description>
</StyledA>
`;

exports[`<ExternalLink> with a given "faIcon" property should render with a "linkedin-square" icon 1`] = `
<StyledA
  color="inherit"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <IconLinkedin />
  <Description>
    ExternalLink to
  </Description>
</StyledA>
`;
